--- a/settings.json
+++ b/settings.json
@@ -31,7 +31,7 @@
         "name": "Windows PowerShell"
       },
       {
-        "commandline": "%SystemRoot%\\System32\\cmd.exe",
+        "commandline": "%SystemRoot%\\System32\\cmd.exe /s /k \"\"%CLINK_HOME%\\clink_x64.exe\" inject --quiet\"",
         "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
         "hidden": false,
         "name": "Windows Command Prompt"
